// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductTitle should show component with the name of the product 1`] = `
<div
  className="productCard undefined"
>
  <span
    className="productDescription undefined"
  >
    Coffee Mug - card
  </span>
</div>
`;

exports[`ProductTitle should show title correctly with custom title 1`] = `
<span
  className="productDescription undefined"
>
  My custom title
</span>
`;
